tests/miz/pass/types/pass_type_elaboration_builtin_type_expression_001.miz
reserve x for set;
reserve y for object;
