tests/miz/fail/types/fail_type_elaboration_imported_empty_positive_gap_001.miz
import parser.type_fixtures;
reserve x for empty set;
